force-app/main/default/objects/custom_create350__c/custom_create350__c.object-meta.xml
<CustomObject>
    <label>Custom created object350</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects350</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>