force-app/main/default/objects/custom_create350__c/fields/custom_create_350field697__c.field-meta.xml
<CustomField>
    <fullName>custom_create_350field697__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 350field697</label>
    <type>Checkbox</type>
</CustomField>